Implement realm-based compilation